# db-benchmarks

./: .gitignore  README.md  benchmarks.py  clickhouse_flat_join_mv_strategy.py  clickhouse_flat_join_strategy.py  clickhouse_flat_mv_strategy.py  clickhouse_flat_strategy.py  clickhouse_nested_mv_strategy.py  clickhouse_nested_strategy.py  data_generation.py  docker-compose.yml  duckdb_parquet_flat_strategy.py  ingestion_benchmark.py  main.py  mongodb_strategy.py  pg_duckdb_strategy.py  postgres_flat_join_strategy.py  postgres_flat_strategy.py  postgres_flat_strategy_hydra.py  postgres_flat_strategy_paradeDB.py  postgres_jsonb_stratergy.py  pyproject.toml  requirements.txt  resource_monitor.py  run_ingestion_benchmark.py  strategy.py  timer.py
clickhouse-init/: 01-init.sql
init-scripts/: 01-init-extensions.sql
init-scripts-pg18/: 01-init-extensions.sql
mongo-init/: 01-init.js
