[project]
name = "db-benchmarks"
version = "0.1.0"
description = ""
authors = [
    { name = "Konstantinos Charalampous", email = "konstantinos@suite5.eu" },
]
requires-python = "<3.14,>=3.9"
dependencies = [
    "pymongo (>=4.15.3,<5.0.0)",
    "duckdb (>=0.10.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "faker (>=20.0.0)",
    "tabulate (>=0.9.0)",
    "matplotlib (>=3.7.0)",
    "seaborn (>=0.12.0)",
    "psutil (>=5.9.0)",
    "psycopg[binary] (>=3.1.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "boto3 (>=1.40.52,<2.0.0)",
    "botocore (>=1.40.52,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "clickhouse-connect (>=0.9.2,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
